# llvm-fihardening

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  FIHardeningPass.cpp  FIHardeningRuntime.cpp  FIHardeningRuntime.h  FIHardeningTransform.cpp  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  docker.yml  release.yml
docker-repro/: Dockerfile  README.md
scripts/: LLFI-build.sh  analyze_llfi_samples.sh  benchmark.sh  benchmark_README.md  cleanup.sh  compare_all_configurations.sh  compare_transform_vs_baseline.sh  demo_opt_benchmarking.sh  generate_O3_ir.sh  llfi-analyze.sh  llfi-compare.sh  llfi-run.sh  opt_only_benchmark.sh  prepare_llfi_experiment.sh  quick_test.sh  run_baseline_comparison.sh  run_benchmark_analysis.sh  run_tests.sh  run_tests_docker.sh  setup_real_benchmarks.sh  test_advanced_hardening.sh  validate_functional.sh  validate_tests.py  verify_cleanup.sh
tests/: test_comprehensive.c
